Fixed spacing, a few degrades caused by spacing, and updated logic to have page reload on image upload to remove cached images

--- a/Client/css/additionalStyle.css
+++ b/Client/css/additionalStyle.css
@@ -11,3 +11,15 @@
 .main-nav {
     margin-bottom: 30px;
 }
+
+.movie-poster {
+    width: 90%
+}
+
+.bottom-margin {
+    margin-bottom: 30px;
+}
+
+.bottom-margin-small {
+    margin-bottom: 20px;
+}
